--- a/Ekrut - client/src/fxml/SaleTemplateCreationForm.fxml
+++ b/Ekrut - client/src/fxml/SaleTemplateCreationForm.fxml
@@ -20,15 +20,11 @@
             <Font name="System Bold Italic" size="32.0" />
          </font>
       </Label>
-      <Button fx:id="btnBack" layoutX="21.0" layoutY="333.0" mnemonicParsing="false" onAction="#BackButton" style="-fx-background-color: 0;">
-         <graphic>
-            <ImageView fitHeight="45.0" fitWidth="118.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../../images/back%20icon.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </Button>
+      <ImageView fitHeight="45.0" fitWidth="118.0" layoutX="18.0" layoutY="342.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/back%20icon.png" />
+         </image>
+      </ImageView>
       <ImageView fitHeight="26.0" fitWidth="75.0" layoutX="492.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../images/min-max-close.png" />
