--- a/Ekrut - client/src/fxml/EditUser.fxml
+++ b/Ekrut - client/src/fxml/EditUser.fxml
@@ -11,24 +11,24 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="501.0" prefWidth="740.0" style="-fx-background-color: #faf2d7;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.EditUserController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="616.0" prefWidth="1004.0" style="-fx-background-color: #faf2d7;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.EditUserController">
    <children>
-      <ImageView fitHeight="39.0" fitWidth="109.0" layoutX="14.0" layoutY="448.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="39.0" fitWidth="109.0" layoutX="22.0" layoutY="548.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../images/back%20icon.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="145.0" fitWidth="138.0" layoutX="565.0" layoutY="-13.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="145.0" fitWidth="138.0" layoutX="802.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../images/EKrut%20logo.png" />
          </image>
       </ImageView>
-      <Label layoutX="182.0" layoutY="14.0" text="Users List">
+      <Label layoutX="342.0" layoutY="14.0" text="Users List">
          <font>
             <Font name="System Bold Italic" size="36.0" />
          </font>
       </Label>
-      <AnchorPane layoutX="526.0" layoutY="117.0" prefHeight="267.0" prefWidth="205.0" style="-fx-border-color: #000000; -fx-border-width: 2;">
+      <AnchorPane layoutX="757.0" layoutY="142.0" prefHeight="386.0" prefWidth="206.0" style="-fx-border-color: #000000; -fx-border-width: 2;">
          <children>
             <Label layoutX="62.0" layoutY="-2.0" prefHeight="36.0" prefWidth="85.0" text="Edit User" textFill="#cf4c0a">
                <font>
@@ -52,39 +52,60 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="102.0" text="Password">
+            <Label layoutX="14.0" layoutY="104.0" text="Password">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="134.0" text="Role">
+            <Label layoutX="14.0" layoutY="136.0" text="Role">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
             <TextField fx:id="txtUser" layoutX="94.0" layoutY="67.0" prefHeight="26.0" prefWidth="96.0" />
-            <TextField fx:id="txtPassword" layoutX="94.0" layoutY="98.0" prefHeight="26.0" prefWidth="96.0" />
-            <TextField fx:id="txtRole" layoutX="94.0" layoutY="129.0" prefHeight="26.0" prefWidth="96.0" />
-            <Button fx:id="btnUpdate" alignment="CENTER" contentDisplay="TOP" layoutX="30.0" layoutY="198.0" mnemonicParsing="false" onAction="#updateUser" prefHeight="54.0" prefWidth="157.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Update">
+            <TextField fx:id="txtPassword" layoutX="94.0" layoutY="100.0" prefHeight="26.0" prefWidth="96.0" />
+            <TextField fx:id="txtRole" layoutX="94.0" layoutY="132.0" prefHeight="26.0" prefWidth="96.0" />
+            <Button fx:id="btnUpdate" alignment="CENTER" contentDisplay="TOP" layoutX="23.0" layoutY="308.0" mnemonicParsing="false" onAction="#updateUser" prefHeight="54.0" prefWidth="157.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Update">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Button>
+            <Label layoutX="16.0" layoutY="231.0" text="Address">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="169.0" text="Name">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="15.0" layoutY="200.0" text="Phone">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtName" layoutX="94.0" layoutY="165.0" prefHeight="26.0" prefWidth="96.0" />
+            <TextField fx:id="txtPhone" layoutX="94.0" layoutY="196.0" prefHeight="26.0" prefWidth="96.0" />
+            <TextField fx:id="txtAddress" layoutX="94.0" layoutY="227.0" prefHeight="26.0" prefWidth="96.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="14.0" layoutY="81.0" prefHeight="251.0" prefWidth="508.0" style="-fx-background-color: #ffffff; -fx-border-color: #000000; -fx-border-width: 2;">
+      <AnchorPane layoutX="14.0" layoutY="86.0" prefHeight="251.0" prefWidth="508.0" style="-fx-background-color: #ffffff; -fx-border-color: #000000; -fx-border-width: 2;">
          <children>
-            <TableView fx:id="tableUsers" layoutX="5.0" layoutY="2.0" prefHeight="244.0" prefWidth="499.0">
+            <TableView fx:id="tableUsers" layoutX="5.0" layoutY="2.0" prefHeight="322.0" prefWidth="719.0">
               <columns>
-                <TableColumn fx:id="id_col" prefWidth="75.0" text="id" />
-                <TableColumn fx:id="user_col" prefWidth="75.0" text="Username" />
-                  <TableColumn fx:id="password_col" prefWidth="75.0" text="Password" />
-                  <TableColumn fx:id="role_col" prefWidth="75.0" text="Role" />
+                <TableColumn fx:id="id_col" prefWidth="36.800048828125" text="id" />
+                <TableColumn fx:id="user_col" prefWidth="91.20000839233398" text="Username" />
+                  <TableColumn fx:id="password_col" prefWidth="108.79998779296875" text="Password" />
+                  <TableColumn fx:id="role_col" prefWidth="116.0" text="Role" />
+                  <TableColumn fx:id="name_col" prefWidth="99.20001220703125" text="Name" />
+                  <TableColumn fx:id="phone_col" prefWidth="121.59994506835938" text="Phone" />
+                  <TableColumn fx:id="address_col" prefWidth="148.7999267578125" text="Address" />
               </columns>
             </TableView>
          </children>
       </AnchorPane>
-      <ImageView fitHeight="26.0" fitWidth="75.0" layoutX="689.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="26.0" fitWidth="75.0" layoutX="860.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../images/min-max-close.png" />
          </image>
