--- a/Ekrut - client/src/fxml/EditUser.fxml
+++ b/Ekrut - client/src/fxml/EditUser.fxml
@@ -11,14 +11,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="501.0" prefWidth="740.0" style="-fx-background-color: #faf2d7;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.EditUserController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="677.0" prefWidth="1030.0" style="-fx-background-color: #faf2d7;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.EditUserController">
    <children>
-      <ImageView fitHeight="39.0" fitWidth="109.0" layoutX="14.0" layoutY="448.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="39.0" fitWidth="109.0" layoutX="14.0" layoutY="624.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../images/back%20icon.png" />
          </image>
       </ImageView>
-      <ImageView fitHeight="145.0" fitWidth="138.0" layoutX="565.0" layoutY="-13.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="145.0" fitWidth="138.0" layoutX="848.0" layoutY="-15.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../images/EKrut%20logo.png" />
          </image>
@@ -28,7 +28,7 @@
             <Font name="System Bold Italic" size="36.0" />
          </font>
       </Label>
-      <AnchorPane layoutX="526.0" layoutY="117.0" prefHeight="267.0" prefWidth="205.0" style="-fx-border-color: #000000; -fx-border-width: 2;">
+      <AnchorPane layoutX="803.0" layoutY="108.0" prefHeight="458.0" prefWidth="206.0" style="-fx-border-color: #000000; -fx-border-width: 2;">
          <children>
             <Label layoutX="62.0" layoutY="-2.0" prefHeight="36.0" prefWidth="85.0" text="Edit User" textFill="#cf4c0a">
                <font>
@@ -65,29 +65,52 @@
             <TextField fx:id="txtUser" layoutX="94.0" layoutY="67.0" prefHeight="26.0" prefWidth="96.0" />
             <TextField fx:id="txtPassword" layoutX="94.0" layoutY="98.0" prefHeight="26.0" prefWidth="96.0" />
             <TextField fx:id="txtRole" layoutX="94.0" layoutY="129.0" prefHeight="26.0" prefWidth="96.0" />
-            <Button fx:id="btnUpdate" alignment="CENTER" contentDisplay="TOP" layoutX="30.0" layoutY="198.0" mnemonicParsing="false" onAction="#updateUser" prefHeight="54.0" prefWidth="157.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Update">
+            <Button fx:id="btnUpdate" alignment="CENTER" contentDisplay="TOP" layoutX="23.0" layoutY="377.0" mnemonicParsing="false" onAction="#updateUser" prefHeight="54.0" prefWidth="157.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Update">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Button>
+            <Label layoutX="14.0" layoutY="228.0" text="Address">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="198.0" text="Phone">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label layoutX="14.0" layoutY="167.0" text="Name">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtName" layoutX="94.0" layoutY="160.0" prefHeight="26.0" prefWidth="96.0" />
+            <Label layoutX="15.0" layoutY="261.0" text="Email">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtPhone" layoutX="94.0" layoutY="191.0" prefHeight="26.0" prefWidth="96.0" />
+            <TextField fx:id="txtAddress" layoutX="94.0" layoutY="223.0" prefHeight="26.0" prefWidth="96.0" />
+            <TextField fx:id="txtEmail" layoutX="94.0" layoutY="256.0" prefHeight="26.0" prefWidth="96.0" />
          </children>
       </AnchorPane>
-      <AnchorPane layoutX="14.0" layoutY="81.0" prefHeight="251.0" prefWidth="508.0" style="-fx-background-color: #ffffff; -fx-border-color: #000000; -fx-border-width: 2;">
+      <AnchorPane layoutX="14.0" layoutY="87.0" prefHeight="479.0" prefWidth="782.0" style="-fx-background-color: #ffffff; -fx-border-color: #000000; -fx-border-width: 2;">
          <children>
-            <TableView fx:id="tableUsers" layoutX="5.0" layoutY="2.0" prefHeight="244.0" prefWidth="499.0">
+            <TableView fx:id="tableUsers" layoutX="5.0" layoutY="2.0" prefHeight="471.0" prefWidth="774.0">
               <columns>
-                <TableColumn fx:id="id_col" prefWidth="75.0" text="id" />
-                <TableColumn fx:id="user_col" prefWidth="75.0" text="Username" />
-                  <TableColumn fx:id="password_col" prefWidth="75.0" text="Password" />
-                  <TableColumn fx:id="role_col" prefWidth="75.0" text="Role" />
+                <TableColumn fx:id="id_col" prefWidth="36.79998779296875" text="id" />
+                <TableColumn fx:id="user_col" prefWidth="93.59991073608398" text="Username" />
+                  <TableColumn fx:id="password_col" prefWidth="96.00006103515625" text="Password" />
+                  <TableColumn fx:id="role_col" prefWidth="90.40003967285156" text="Role" />
+                  <TableColumn fx:id="name_col" prefWidth="90.39990234375" text="Name" />
+                  <TableColumn fx:id="phone_col" prefWidth="94.4000244140625" text="Phone" />
+                  <TableColumn fx:id="address_col" prefWidth="136.800048828125" text="Address" />
+                  <TableColumn fx:id="email_col" prefWidth="133.5999755859375" text="Email" />
               </columns>
             </TableView>
          </children>
       </AnchorPane>
-      <ImageView fitHeight="26.0" fitWidth="75.0" layoutX="689.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../images/min-max-close.png" />
-         </image>
-      </ImageView>
    </children>
 </AnchorPane>
