--- a/Ekrut - client/src/fxml/DeliveryOperatorPanel.fxml
+++ b/Ekrut - client/src/fxml/DeliveryOperatorPanel.fxml
@@ -7,9 +7,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #faf2d7; -fx-border-color: #000000; -fx-border-width: 4;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.DeliveryController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #faf2d7; -fx-border-color: #000000; -fx-border-width: 4;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.DeliveryOperatorController">
    <children>
-      <ImageView fitHeight="236.0" fitWidth="245.0" layoutX="373.0" layoutY="165.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="236.0" fitWidth="245.0" layoutX="356.0" layoutY="157.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../images/delivery%20man.png" />
          </image>
@@ -24,7 +24,7 @@
             <Font name="System Bold Italic" size="36.0" />
          </font>
       </Label>
-      <Button fx:id="btnLogOut" alignment="CENTER_RIGHT" graphicTextGap="5.0" layoutX="20.0" layoutY="336.0" mnemonicParsing="false" onAction="#handleButton" prefHeight="52.0" prefWidth="135.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Log out">
+      <Button fx:id="logoutBtn" alignment="CENTER_RIGHT" graphicTextGap="5.0" layoutX="20.0" layoutY="336.0" mnemonicParsing="false" onAction="#logout" prefHeight="52.0" prefWidth="135.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Log out">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
@@ -36,7 +36,7 @@
             </ImageView>
          </graphic>
       </Button>
-      <Button fx:id="btnDeliveryOdrers" layoutX="114.0" layoutY="114.0" mnemonicParsing="false" onAction="#handleButton" prefHeight="50.0" prefWidth="171.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Delivery orders">
+      <Button fx:id="deliveryBtn" layoutX="114.0" layoutY="114.0" mnemonicParsing="false" onAction="#MoveToForm" prefHeight="50.0" prefWidth="171.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Delivery orders">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
