--- a/Ekrut - client/src/fxml/LoginForm.fxml
+++ b/Ekrut - client/src/fxml/LoginForm.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -32,8 +33,7 @@
          </font>
       </Label>
       <TextField fx:id="txtUserid" layoutX="409.0" layoutY="185.0" style="-fx-border-color: #000000; -fx-border-width: 2;" />
-      <TextField fx:id="txtPW" accessibleRole="PASSWORD_FIELD" layoutX="409.0" layoutY="245.0" style="-fx-border-color: #000000; -fx-border-width: 2;" />
-      <Button fx:id="btnLogin" layoutX="367.0" layoutY="314.0" mnemonicParsing="false" onAction="#connect" prefHeight="50.0" prefWidth="171.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Login">
+      <Button fx:id="btnLogin" layoutX="367.0" layoutY="314.0" mnemonicParsing="false" onAction="#regulerLogin" prefHeight="50.0" prefWidth="171.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Login">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
@@ -56,5 +56,6 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
+      <PasswordField fx:id="txtPW" layoutX="409.0" layoutY="242.0" style="-fx-border-color: #000000; -fx-border-width: 2;" />
    </children>
 </AnchorPane>
