--- a/Ekrut - client/src/fxml/ChooseReportScreen.fxml
+++ b/Ekrut - client/src/fxml/ChooseReportScreen.fxml
@@ -25,7 +25,7 @@
          <font>
             <Font name="System Bold" size="15.0" />
          </font></Label>
-      <ImageView fitHeight="112.0" fitWidth="150.0" layoutX="32.0" layoutY="195.0">
+      <ImageView fitHeight="112.0" fitWidth="150.0" layoutX="32.0" layoutY="195.0" onMouseClicked="#StockStatusReportImgClick">
          <image>
             <Image url="file:/C:/Users/97253/Desktop/EKrut/Ekrut%20-%20client/images/stock.png" />
          </image>
