--- a/Ekrut - client/src/fxml/DeliveryOrdersForm.fxml
+++ b/Ekrut - client/src/fxml/DeliveryOrdersForm.fxml
@@ -4,41 +4,63 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="439.0" prefWidth="681.0" style="-fx-background-color: #faf2d7; -fx-border-color: #000000; -fx-border-width: 4;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.DeliveryOrdersController">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="591.0" prefWidth="938.0" style="-fx-background-color: #faf2d7; -fx-border-color: #000000; -fx-border-width: 4;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.DeliveryOrdersController">
    <children>
-      <ImageView fitHeight="185.0" fitWidth="183.0" layoutX="498.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="200.0" fitWidth="216.0" layoutX="743.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../images/EKrut%20logo.png" />
+            <Image url="@../../images/EKrutLogo.png" />
          </image>
       </ImageView>
-      <TableView fx:id="ordersTable" layoutX="13.0" layoutY="73.0" prefHeight="293.0" prefWidth="498.0">
+      <TableView fx:id="ordersTable" layoutX="21.0" layoutY="73.0" prefHeight="419.0" prefWidth="754.0">
         <columns>
-            <TableColumn fx:id="idCell" prefWidth="59.200016021728516" text="Order ID" />
-            <TableColumn fx:id="nameCell" prefWidth="91.20001220703125" text="Name" />
-            <TableColumn fx:id="addressCell" prefWidth="68.800048828125" text="Address" />
-            <TableColumn fx:id="phoneCell" prefWidth="68.00006103515625" text="Phone" />
-          <TableColumn fx:id="dateCell" prefWidth="67.20001983642578" text="Date" />
-            <TableColumn fx:id="timeCell" prefWidth="68.800048828125" text="Time" />
+            <TableColumn fx:id="idCell" prefWidth="35.999999046325684" resizable="false" text="ID" />
+            <TableColumn fx:id="nameCell" prefWidth="144.80002212524414" resizable="false" text="Name" />
+            <TableColumn fx:id="addressCell" prefWidth="213.6000518798828" resizable="false" text="Address" />
+            <TableColumn fx:id="phoneCell" prefWidth="116.79998779296875" resizable="false" text="Phone" />
+          <TableColumn fx:id="dateCell" prefWidth="79.20001220703125" resizable="false" text="Date" />
+            <TableColumn fx:id="timeCell" prefWidth="71.20001220703125" resizable="false" text="Time" />
+            <TableColumn fx:id="statusCell" prefWidth="90.4000244140625" resizable="false" text="Status" />
         </columns>
       </TableView>
-      <ImageView fx:id="backBtn" fitHeight="45.0" fitWidth="118.0" layoutX="28.0" layoutY="378.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="backBtn" fitHeight="54.0" fitWidth="132.0" layoutX="18.0" layoutY="522.0" onMouseClicked="#back" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../images/back%20icon.png" />
          </image>
       </ImageView>
-      <Button fx:id="approveBtn" disable="true" layoutX="363.0" layoutY="382.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="147.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Approve delivery">
+      <Button fx:id="approveBtn" layoutX="414.0" layoutY="523.0" mnemonicParsing="false" onMouseClicked="#approveDelivery" prefHeight="42.0" prefWidth="178.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Approve delivery">
          <font>
-            <Font name="System Bold Italic" size="14.0" />
+            <Font name="System Bold Italic" size="16.0" />
          </font>
       </Button>
-      <Label layoutX="122.0" layoutY="14.0" text="Delivery orders" textFill="#cf4c0a">
+      <Label layoutX="201.0" layoutY="14.0" text="Delivery orders" textFill="#cf4c0a">
          <font>
             <Font name="System Bold Italic" size="36.0" />
+         </font>
+      </Label>
+      <ImageView fx:id="refreshBtn" fitHeight="84.0" fitWidth="76.0" layoutX="795.0" layoutY="228.0" onMouseClicked="#initialize" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../images/refresh.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="182.0" layoutY="531.0" text="Enter Order ID: ">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
+      <TextField fx:id="OrderIdLbl" layoutX="326.0" layoutY="527.0" prefHeight="35.0" prefWidth="76.0">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </TextField>
+      <Label fx:id="errorLbl" layoutX="605.0" layoutY="521.0" prefHeight="47.0" prefWidth="321.0" textFill="RED">
+         <font>
+            <Font name="System Bold" size="16.0" />
          </font>
       </Label>
    </children>
