--- a/Ekrut - client/src/fxml/MarketingEmployeePanel.fxml
+++ b/Ekrut - client/src/fxml/MarketingEmployeePanel.fxml
@@ -7,11 +7,11 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="593.0" style="-fx-background-color: #faf2d7; -fx-border-color: #000000; -fx-border-width: 4;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MarketingSalesDepartmentController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="593.0" style="-fx-background-color: #faf2d7; -fx-border-color: #000000; -fx-border-width: 4;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MarketingEmployeeController">
    <children>
       <ImageView fitHeight="271.0" fitWidth="266.0" layoutX="348.0" layoutY="126.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../images/EKrut%20logo.png" />
+            <Image url="@../../images/EKrutLogo.png" />
          </image>
       </ImageView>
       <Button fx:id="btnLogout" alignment="CENTER_RIGHT" contentDisplay="TOP" layoutX="14.0" layoutY="336.0" mnemonicParsing="false" onAction="#logout" prefHeight="50.0" prefWidth="126.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Log out">
@@ -24,12 +24,12 @@
             <Image url="@../../images/logout%20icon.png" />
          </image>
       </ImageView>
-      <Button fx:id="btnCreateNewSaleTemplate" layoutX="70.0" layoutY="131.0" mnemonicParsing="false" onAction="#CreateSaleTemplateButton" prefHeight="54.0" prefWidth="255.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Create new sale template">
+      <Button fx:id="btnRun" layoutX="107.0" layoutY="126.0" mnemonicParsing="false" onAction="#runSaleButton" prefHeight="54.0" prefWidth="180.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Run sale">
          <font>
             <Font name="System Bold Italic" size="18.0" />
          </font>
       </Button>
-      <Label layoutX="74.0" layoutY="38.0" text="Welcome back">
+      <Label fx:id="welcomeLbl" layoutX="74.0" layoutY="38.0" text="Welcome back">
          <font>
             <Font name="System Bold Italic" size="36.0" />
          </font>
