--- a/Ekrut - client/src/fxml/CreateCustomer.fxml
+++ b/Ekrut - client/src/fxml/CreateCustomer.fxml
@@ -38,7 +38,7 @@
                </font>
             </Label>
             <Separator layoutX="75.0" layoutY="42.0" prefHeight="3.0" prefWidth="190.0" />
-            <Button fx:id="btnCreate" alignment="CENTER" contentDisplay="TOP" layoutX="95.0" layoutY="377.0" mnemonicParsing="false" onAction="#customerCreate" prefHeight="54.0" prefWidth="183.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Create Customer">
+            <Button fx:id="btnCreate" alignment="CENTER" contentDisplay="TOP" disable="true" layoutX="95.0" layoutY="333.0" mnemonicParsing="false" onAction="#customerCreate" prefHeight="54.0" prefWidth="183.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Create Customer">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
@@ -51,7 +51,6 @@
               </columnConstraints>
               <rowConstraints>
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -60,82 +59,74 @@
               </rowConstraints>
                <children>
                   <TextField fx:id="txtUser" prefHeight="26.0" prefWidth="96.0" GridPane.columnIndex="1" />
-                  <TextField fx:id="txtPassword" prefHeight="26.0" prefWidth="96.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <TextField fx:id="txtName" prefHeight="26.0" prefWidth="96.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <TextField fx:id="txtPhone" prefHeight="26.0" prefWidth="96.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                  <TextField fx:id="txtAddress" prefHeight="26.0" prefWidth="96.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <TextField fx:id="txtEmail" prefHeight="26.0" prefWidth="96.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <TextField fx:id="txtName" prefHeight="26.0" prefWidth="96.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                  <TextField fx:id="txtPhone" prefHeight="26.0" prefWidth="96.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <TextField fx:id="txtAddress" prefHeight="26.0" prefWidth="96.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <TextField fx:id="txtEmail" prefHeight="26.0" prefWidth="96.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
                   <Label text="Username">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label text="Password" GridPane.rowIndex="1">
+                  <Label text="Name" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label text="Name" GridPane.rowIndex="2">
+                  <Label text="Phone" GridPane.rowIndex="2">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label text="Phone" GridPane.rowIndex="3">
+                  <Label text="Address" GridPane.rowIndex="3">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label text="Address" GridPane.rowIndex="4">
+                  <Label text="Email" GridPane.rowIndex="4">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label text="Email" GridPane.rowIndex="5">
+                  <Label fx:id="errName" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label fx:id="errUser" textFill="RED" GridPane.columnIndex="2">
+                  <Label fx:id="errPhone" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="2">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label fx:id="errPassword" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="1">
+                  <Label fx:id="errAddress" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="3">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label fx:id="errName" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                  <Label fx:id="errEmail" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="4">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label fx:id="errPhone" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                  <Label text="Credit Card" GridPane.rowIndex="5">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label fx:id="errAddress" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="4">
+                  <TextField fx:id="txtCC" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <Label fx:id="errCC" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="5">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <Label fx:id="errEmail" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="5">
+                  <Button fx:id="btnGetUser" alignment="CENTER" contentDisplay="TOP" mnemonicParsing="false" onAction="#getUser" prefHeight="25.0" prefWidth="72.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Get User" GridPane.columnIndex="2">
                      <font>
-                        <Font name="System Bold" size="12.0" />
+                        <Font name="System Bold" size="9.0" />
                      </font>
-                  </Label>
-                  <Label text="Credit Card" GridPane.rowIndex="6">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="txtCC" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                  <Label fx:id="errCC" textFill="RED" GridPane.columnIndex="2" GridPane.rowIndex="6">
-                     <font>
-                        <Font name="System Bold" size="12.0" />
-                     </font>
-                  </Label>
+                     <GridPane.margin>
+                        <Insets bottom="5.0" left="10.0" right="5.0" top="5.0" />
+                     </GridPane.margin>
+                  </Button>
                </children>
                <padding>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
@@ -144,14 +135,22 @@
                   <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
                </opaqueInsets>
             </GridPane>
-            <Label fx:id="lblErr" layoutX="63.0" layoutY="351.0" prefHeight="18.0" prefWidth="249.0" textFill="RED">
+            <Label fx:id="lblErr" layoutX="62.0" layoutY="303.0" prefHeight="18.0" prefWidth="249.0" textFill="RED">
                <font>
                   <Font name="System Bold" size="13.0" />
                </font>
             </Label>
-            <Label layoutX="33.0" layoutY="68.0" text="*" textFill="RED" />
-            <Label layoutX="33.0" layoutY="104.0" text="*" textFill="RED" />
-            <Label layoutX="33.0" layoutY="139.0" text="*" textFill="RED" />
+            <Label layoutX="31.0" layoutY="68.0" text="*" textFill="RED" />
+            <Label layoutX="32.0" layoutY="105.0" text="*" textFill="RED" />
+            <Button fx:id="btnReset" alignment="CENTER" contentDisplay="TOP" layoutX="154.0" layoutY="272.0" mnemonicParsing="false" onAction="#reset" prefHeight="25.0" prefWidth="72.0" style="-fx-background-radius: 100; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Reset">
+               <font>
+                  <Font name="System Bold" size="9.0" />
+               </font>
+            </Button>
+            <Label layoutX="32.0" layoutY="139.0" text="*" textFill="RED" />
+            <Label layoutX="32.0" layoutY="173.0" text="*" textFill="RED" />
+            <Label layoutX="32.0" layoutY="209.0" text="*" textFill="RED" />
+            <Label layoutX="33.0" layoutY="245.0" text="*" textFill="RED" />
          </children>
       </AnchorPane>
    </children>
