--- a/Ekrut - client/src/fxml/LoginForm.fxml
+++ b/Ekrut - client/src/fxml/LoginForm.fxml
@@ -2,13 +2,13 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-
 
 <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #faf2d7; -fx-border-color: #000000; -fx-border-width: 4;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.LoginController">
    <children>
@@ -33,8 +33,7 @@
          </font>
       </Label>
       <TextField fx:id="txtUserid" layoutX="409.0" layoutY="185.0" style="-fx-border-color: #000000; -fx-border-width: 2;" />
-      <TextField fx:id="txtPW" accessibleRole="PASSWORD_FIELD" layoutX="409.0" layoutY="245.0" style="-fx-border-color: #000000; -fx-border-width: 2;" />
-      <Button fx:id="btnLogin" layoutX="367.0" layoutY="314.0" mnemonicParsing="false" onAction="#connect" prefHeight="50.0" prefWidth="171.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Login">
+      <Button fx:id="btnLogin" layoutX="367.0" layoutY="314.0" mnemonicParsing="false" onAction="#regulerLogin" prefHeight="50.0" prefWidth="171.0" style="-fx-background-radius: 100; -fx-background-color: #ff5700; -fx-border-color: #000000; -fx-border-radius: 100; -fx-border-width: 2;" text="Login">
          <font>
             <Font name="System Bold Italic" size="14.0" />
          </font>
@@ -52,10 +51,11 @@
       <Separator layoutX="290.0" layoutY="145.0" orientation="VERTICAL" prefHeight="225.0" prefWidth="7.0" />
       <Separator layoutX="44.0" layoutY="131.0" prefHeight="3.0" prefWidth="222.0" />
       <Separator layoutX="331.0" layoutY="130.0" prefHeight="3.0" prefWidth="222.0" />
-      <Label fx:id="errMsgLbl" layoutX="374.0" layoutY="282.0" prefHeight="18.0" prefWidth="186.0" textFill="RED">
+      <Label fx:id="errMsgLbl" layoutX="329.0" layoutY="282.0" prefHeight="18.0" prefWidth="250.0" textFill="RED">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
+      <PasswordField fx:id="txtPW" layoutX="409.0" layoutY="242.0" style="-fx-border-color: #000000; -fx-border-width: 2;" />
    </children>
 </AnchorPane>
